Add Apis related to OTP
